5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1674_1101.log
== TEST (2019-05-01 21:49:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
tipo = input("tipo de instalacao: (R/I/C)")
if(r.upper() <= 500):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(r.upper() >= 500):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(i.upper() <= 5000):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(i.upper() >= 5000):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(c.upper <= 1000):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(c.upper >= 1000):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(r.upper() <= 500):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:50:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
tipo = input("tipo de instalacao: (r/i/c)")
if(r.upper() <= 500):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(r.upper() >= 500):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(i.upper() <= 5000):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(i.upper() >= 5000):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(c.upper <= 1000):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(c.upper >= 1000):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(r.upper() <= 500):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:21:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= 500) and (consumo == r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= 500) and (consumo == r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= 5000) and (consumo == i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= 5000) and (consumo == i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= 1000) and (consumo == i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= 1000) and (consumo == c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(consumo <= 500) and (consumo == r):
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:26:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:28:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.181899
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 Kwh e tipo I
Valor total: R$ -24.64
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 Kwh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:30:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:30:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:30:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"Kwh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- OUTPUT:
Entradas: -56.0 Kwh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:33:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo >= c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.191653
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -24.64
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:09:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.221218
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -24.64
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:11:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo<=r):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>r):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo<=i):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>i):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo<=c):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>c):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -24.64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:41:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo<="r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>"r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo<="i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>"i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo<="c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo>"c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.167919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo<="r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:42:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.160309
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.150721
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.152669
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.159321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.224112
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.371367
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.366625
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1674/1101/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
consumo = float(input("digite o valor:"))
r = 500
i = 5000
c = 1000
tipo = input("tipo de instalacao: (r/i/c)")
if(consumo <= "r"):
	vt = consumo * 0.44
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "r"):
	vt = consumo * 0.65
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "i"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "i"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo <= "c"):
	vt = consumo * 0.55
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
elif(consumo > "c"):
	vt = consumo * 0.60
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Valor total: R$", vt)
else:
	print("Entradas:", consumo,"kWh e tipo", tipo)
	print("Dados invalidos")
	
	
	
	
-- EXECUTION TIME:
0.402529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1101/main.py", line 9, in <module>
    if(consumo <= "r"):
TypeError: unorderable types: float() <= str()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:45:42) 
-- CODE:
c = float(input("consumo em kWh: "))
t = input("residencias(r)/industrias(i)/comercios(c): ")
print("Entradas:", c, "kWh e tipo", t)
y = "Dados invalidos"
if ((t.lower()!= "r") and (t.lower()!= "i") and (t.lower()!= "c")) or (c<0):
	print(y)
elif (c <= 500) and (t.lower()=="r"):
	a = c*0.44
	print('Valor total: R$ ', round(a, 2))
elif (c > 500) and (t.lower()== "r"):
	a = c*0.65
	print('Valor total: R$ ', round(a, 2))
elif (c<=1000) and (t.lower()== "c"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>1000) and (t.lower()== "c"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
elif (c<=5000) and (t.lower()== "i"):
	a = c*0.55
	print('Valor total: R$ ', round(a, 2))
elif (c>5000) and (t.lower()== "i"):
	a = c*0.60
	print('Valor total: R$ ', round(a, 2))
	
	
	
-- EXECUTION TIME:
0.184163
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$  621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
